haskell-logic (0.15) unstable; urgency=low

  * Rename PredicateLogic -> FirstOrderLogic

 -- David Fox <dsf@seereason.com>  Thu, 08 Jul 2010 16:00:35 -0700

haskell-logic (0.14) unstable; urgency=low

  * Fix skolem handling.  Use a Skolem class to convert between Ints
    and skolem functions, and a HasSkolem class to obtain numbers for
    skolem functions from a monad.    
  * Integrate Chiou Prover package into this one.  We need to mix
    pieces of the two.

 -- David Fox <dsf@seereason.com>  Thu, 08 Jul 2010 12:47:23 -0700

haskell-logic (0.13) unstable; urgency=low

  * Implement polymorphic version of implicativeNormalForm.

 -- David Fox <dsf@seereason.com>  Tue, 06 Jul 2010 22:39:55 -0700

haskell-logic (0.12) unstable; urgency=low

  * Parameterize the variable type v in the PredicateLogic class and
    the Formula type in the Parameterized instance.
  * Reduce the number of functional dependencies in the PredicateLogic
    class, this allows us to create two instances that use the same
    types for any of v, p, or f.

 -- David Fox <dsf@seereason.com>  Tue, 06 Jul 2010 17:52:37 -0700

haskell-logic (0.11) unstable; urgency=low

  * Modify the Skolem class so it uses a monad to generate new names
    for skolem functions.  This corresponds to the technique used
    by what is now our only working example of a first order logic
    theorem prover, the new Chiou package.

 -- David Fox <dsf@seereason.com>  Mon, 05 Jul 2010 12:46:08 -0700

haskell-logic (0.10) unstable; urgency=low

  * Add an instance for the Charles Chiou first order logic prover.

 -- David Fox <dsf@seereason.com>  Mon, 05 Jul 2010 09:03:04 -0700

haskell-logic (0.9) unstable; urgency=low

  * Add a Logic.Satisfiable module, containing functions theorem, 
    inconsistant, and invalid.

 -- David Fox <dsf@seereason.com>  Fri, 02 Jul 2010 11:34:38 -0700

haskell-logic (0.8) unstable; urgency=low

  * Modify skolemize so it leaves the universal quantifiers on its